--- a/AnsibleWorkShop/roles/ansible-podman-rootless-provision/vars/main.yml
+++ b/AnsibleWorkShop/roles/ansible-podman-rootless-provision/vars/main.yml
@@ -173,11 +173,11 @@ vars_kernel_modules:
 #   registries.conf
 #   https://github.com/containers/image/blob/main/docs/containers-registries.conf.5.md
 #   https://github.com/containers/podman/blob/main/test/registries.conf
-var_app_config:
+vars_app_config:
   podman:
     containers_conf:
       state: skipped
-      path: /home/{{ target_user }}/.conf/containers/containers.conf.d/{{ role_name }}.conf
+      path: /home/{{ target_user }}/.config/containers/containers.conf.d/{{ role_name }}.conf
       content: |
         [containers]
         # log_driver="k8s-file"
@@ -185,11 +185,11 @@ var_app_config:
         userns = "keep-id"
     storage_conf:
       state: skipped
-      path: /home/{{ target_user }}/.conf/containers/storage.conf
+      path: /home/{{ target_user }}/.config/containers/storage.conf
       content:
     registries_conf:
       state: skipped
-      path: /home/{{ target_user }}/.conf/containers/registries.conf
+      path: /home/{{ target_user }}/.config/containers/registries.conf
       content:
 
 
