update fedora packer process, use cdfile instead of httpdir

--- a/LocalWorkShop/.ssh/config
+++ b/LocalWorkShop/.ssh/config
@@ -38,8 +38,12 @@ Host InfSvc-Alpine
     Port 22
 
 Host InfSvc-Fedora
-    StrictHostKeyChecking no
     HostName 192.168.255.31
     User vagrant
-    IdentityFile ~/.ssh/vagrant
     Port 22
+    UserKnownHostsFile /dev/null
+    StrictHostKeyChecking no
+    PasswordAuthentication no
+    IdentityFile ~/.vagrant.d/insecure_private_key
+    IdentitiesOnly yes
+    LogLevel FATAL
