--- a/KubeWorkShop/Consul/pod-consul_pvc.yaml
+++ b/KubeWorkShop/Consul/pod-consul_pvc.yaml
@@ -2,65 +2,63 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: consul
-  annotations:
-    volume.podman.io/uid: "1000"
-    volume.podman.io/gid: "1000"
 spec:
   resources:
     requests:
-      storage: 2Gi
+      storage: 10Gi
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
----
-apiVersion: v1
-kind: Pod
-metadata:
-  name: consul
-  labels:
-    name: consul
-spec:
-  # https://docs.podman.io/en/latest/markdown/podman-kube-play.1.html
-  # https://github.com/docker-library/docs/tree/master/consul
-  containers:
-    - name: consul
-      image: docker.io/library/consul:latest
-      env:
-        - name: TZ
-          value: Asia/Shanghai
-      resources:
-        limits:
-          memory: "256Mi"
-          cpu: "500m"
-      ports:
-        - name: server
-          containerPort: 8300
-        - name: serf_lan
-          containerPort: 8301
-        - name: web
-          containerPort: 8500
-        - name: dns
-          containerPort: 8600
-          protocol: UDP
-      # https://developer.hashicorp.com/consul/tutorials/day-0/docker-container-agents#configure-and-run-a-consul-server
-      command:
-        - consul
-      args:
-        - agent
-        - -config-file=/consul/config/config.json
-      volumeMounts:
-        - name: consul_config
-          mountPath: /consul/config/
-        - name: consul_data
-          mountPath: /consul/data
-  volumes:
-    - name: consul_config
-      # https://kubernetes.io/docs/concepts/storage/volumes/#configmap
-      configMap:
-        name: consul
-        items:
-          - key: config.json
-            path: config.json
-    - name: consul_data
-      persistentVolumeClaim:
-        claimName: consul
+  storageClassName: default
+# ---
+# apiVersion: v1
+# kind: Pod
+# metadata:
+#   name: consul
+#   labels:
+#     name: consul
+# spec:
+#   # https://docs.podman.io/en/latest/markdown/podman-kube-play.1.html
+#   # https://github.com/docker-library/docs/tree/master/consul
+#   containers:
+#     - name: consul
+#       image: docker.io/library/consul:latest
+#       env:
+#         - name: TZ
+#           value: Asia/Shanghai
+#       resources:
+#         limits:
+#           memory: "256Mi"
+#           cpu: "500m"
+#       ports:
+#         - name: server
+#           containerPort: 8300
+#         - name: serf_lan
+#           containerPort: 8301
+#         - name: web
+#           containerPort: 8500
+#         - name: dns
+#           containerPort: 8600
+#           protocol: UDP
+#       # https://developer.hashicorp.com/consul/tutorials/day-0/docker-container-agents#configure-and-run-a-consul-server
+#       command:
+#         - consul
+#       args:
+#         - agent
+#         - -config-file=/consul/config/config.json
+#       volumeMounts:
+#         - name: consul_config
+#           mountPath: /consul/config/config.json
+#           subPath: config.json
+#         - name: consul_data
+#           mountPath: /consul/data
+#   volumes:
+#     - name: consul_config
+#       # https://kubernetes.io/docs/concepts/storage/volumes/#configmap
+#       configMap:
+#         name: consul
+#         items:
+#           - key: config.json
+#             path: config.json
+#     - name: consul_data
+#       persistentVolumeClaim:
+#         claimName: consul
