--- a/AnsibleWorkShop/roles/ansible-podman-rootless-play/defaults/main.yml
+++ b/AnsibleWorkShop/roles/ansible-podman-rootless-play/defaults/main.yml
@@ -4,21 +4,44 @@
 
 role_name: ansible-podman-rootless-play
 
-#--- podman network
+# podman_network
 defaults_podman_network:
-  name: "{{ role_name }}"
-  state: skipped
+  name: # required, skip if empty
 
 podman_network: "{{ defaults_podman_network | ansible.builtin.combine(vars_podman_network, recursive=True) }}"
 
 
-#--- podman volume
+# podman_volume
 defaults_podman_volume:
-  state: skipped
+  name: # required, skip if empty
 
 podman_volume: "{{ defaults_podman_volume | ansible.builtin.combine(vars_podman_volume, recursive=True) }}"
 
 
-#--- podman_play
+# podman_play
 defaults_podman_play:
-  state: skipped
+  kube_file: # required, skip if empty
+  state: # required, skip if empty
+
+podman_play: "{{ defaults_podman_play | ansible.builtin.combine(vars_podman_play, recursive=True) }}"
+
+
+# podman_generate_systemd
+defaults_podman_generate_systemd:
+  name: # required, skip if empty
+  pod_prefix: pod
+
+podman_generate_systemd: "{{ defaults_podman_generate_systemd | ansible.builtin.combine(vars_podman_generate_systemd, recursive=True) }}"
+
+
+# podman's pod systemd service
+defaults_service:
+  podman_pod:
+    user_scope:
+      skipped: true
+      enabled: true
+      state: started
+  systemd_lingering:
+    state: enable
+
+service: "{{ defaults_service | ansible.builtin.combine(vars_service, recursive=True) }}"
