--- a/AnsibleWorkShop/roles/ansible-podman-rootless-play/vars/main.yml
+++ b/AnsibleWorkShop/roles/ansible-podman-rootless-play/vars/main.yml
@@ -14,12 +14,10 @@ vars_podman_network:
   ip_range:
   ipv6: false
   macvlan:
-  # required
-  name: test
+  name: # required, skip if empty
   opt:
   recreate: false
-  # required
-  state: skipped
+  state: 
   subnet:
 
 # containers.podman.podman_volume
@@ -28,14 +26,12 @@ vars_podman_volume:
   driver: local
   executable: podman
   label:
-    app: test
-  # required
-  name: test
+    app: 
+  name: # required, skip if empty
   options:
     - o=timeout=10
   recreate: false
-  # required
-  state: skipped
+  state: 
 
 # containers.podman.podman_play
 # https://docs.ansible.com/ansible/latest/collections/containers/podman/podman_play_module.html#ansible-collections-containers-podman-podman-play-module
@@ -48,8 +44,7 @@ vars_podman_play:
     # - /path/to/configmap2
   debug: false
   executable: podman
-  # required
-  kube_file: /path/to/kube_file
+  kube_file: # required, skip if empty
   log_driver: journald
   log_level: error
   network:
@@ -58,8 +53,39 @@ vars_podman_play:
   quiet: false
   recreate: false
   seccomp_profile_root: /var/lib/kubelet/seccomp
-  # required
-  state: started
+  state: # required, skip if empty
   tls_verify: false
   username:
     
+vars_pod_name: # required, Name of the pod to generate systemd unit file, skip if empty
+
+# containers.podman.podman_generate_systemd
+# https://docs.ansible.com/ansible/latest/collections/containers/podman/podman_generate_systemd_module.html#ansible-collections-containers-podman-podman-generate-systemd-module
+# https://docs.podman.io/en/latest/markdown/podman-generate-systemd.1.html
+vars_podman_generate_systemd:
+  after:
+  container_prefix: container
+  dest: ~/.config/systemd/user/
+  env:
+  executable: podman
+  name: "{{ vars_pod_name }}" # required, Name of the pod to generate systemd unit file, skip if empty
+  new: false
+  no_header: false
+  pod_prefix: pod
+  requires: 
+  restart_policy: no-restart
+  restart_sec: 
+  separator: "-"
+  start_timeout:
+  stop_timeout:
+  use_names: true
+  wants: 
+
+vars_service:
+  podman_pod:
+    user_scope:
+      skipped: false
+      enabled: true
+      state: started
+  systemd_lingering:
+    state: enable
