--- a/AnsibleWorkShop/roles/ansible-podman-rootless-play/defaults/main.yml
+++ b/AnsibleWorkShop/roles/ansible-podman-rootless-play/defaults/main.yml
@@ -28,8 +28,8 @@ podman_play: "{{ defaults_podman_play | ansible.builtin.combine(vars_podman_play
 
 # podman_generate_systemd
 defaults_podman_generate_systemd:
+  dest: ~/.config/systemd/user/ # required, skip if empty
   name: # required, skip if empty
-  dest: ~/.config/systemd/user/ # required, skiped if empty
 
 podman_generate_systemd: "{{ defaults_podman_generate_systemd | ansible.builtin.combine(vars_podman_generate_systemd, recursive=True) }}"
 
