--- a/AnsibleWorkShop/roles/ansible-podman-rootless-play/vars/main.yml
+++ b/AnsibleWorkShop/roles/ansible-podman-rootless-play/vars/main.yml
@@ -14,7 +14,7 @@ vars_podman_network:
   ip_range: # Allocate container IP from range
   ipv6: # false / true
   macvlan: # Create a Macvlan connection based on this device
-  name: # required, skip if empty
+  name: # !!required, skip if empty
   opt:
     # mtu: 
     # vlan: 
@@ -30,7 +30,7 @@ vars_podman_volume:
   executable: # podman ← (default)
   label: 
     # key: value
-  name: # required, skip if empty
+  name: # !!required, skip if empty
   options:
     # - o=timeout=10
   recreate: # false ← (default) / true
@@ -46,7 +46,7 @@ vars_podman_play:
     # - /path/to/configmap2
   debug: # false ← (default) / true
   executable: # podman ← (default)
-  kube_file: # required, skip if empty
+  kube_file: # !!required, skip if empty
   log_driver: # Set logging driver for all created containers.
   log_level: # error ← (default) / info / warn / error / fatal / panic
   network:
@@ -55,11 +55,11 @@ vars_podman_play:
   quiet: # false / true
   recreate: # false / true
   seccomp_profile_root: # /var/lib/kubelet/seccomp ← (default)
-  state: # required, containers.podman.podman_play will skip if empty
+  state: # !!required, created / started / absent , containers.podman.podman_play will skip if empty
   tls_verify: # false / true
   username: # The username and password to use to authenticate with the registry if required.
     
-vars_pod_name: # required, Name of the pod to generate systemd unit file, skip if empty
+# vars_pod_name: # Name of the pod to generate systemd unit file, if empty, below process will be skipped
 
 # containers.podman.podman_generate_systemd
 # https://docs.ansible.com/ansible/latest/collections/containers/podman/podman_generate_systemd_module.html#ansible-collections-containers-podman-podman-generate-systemd-module
@@ -67,10 +67,10 @@ vars_pod_name: # required, Name of the pod to generate systemd unit file, skip i
 vars_podman_generate_systemd:
   after: # Add the systemd unit after (After=) option, that ordering dependencies between the list of dependencies and this service.
   container_prefix: # container ← (default)
-  dest: ~/.config/systemd/user/ # required, skiped if empty
+  dest: # ~/.config/systemd/user/ ← (default), Destination of the generated systemd unit file(s), usually no need to change
   env: # Set environment variables to the systemd unit files.
   executable: # podman ← (default)
-  name: "{{ vars_pod_name }}" # required, Name of the pod to generate systemd unit file, skip if empty
+  name: # !!required, Name of the pod or container to export, if empty, below process will be skipped
   new: # false ← (default) / true | Generate unit files that create containers and pods, not only start them. 
   no_header: # false ← (default) / true
   pod_prefix: # pod  ← (default)
