--- a/AnsibleWorkShop/roles/ansible-podman-rootless-play/tasks/main.yml
+++ b/AnsibleWorkShop/roles/ansible-podman-rootless-play/tasks/main.yml
@@ -34,37 +34,12 @@
   when:
     - podman_volume.name != none
 
-- name: Copy k8s yaml file to target host
-  ansible.builtin.copy:
-    src: "{{ podman_play.kube_file }}"
-    dest: "~/.ansible/tmp/{{ podman_play.kube_file.split('/')[-1] }}"
-
-- name: Run Podman play
-  containers.podman.podman_play:
-    authfile: "{{ podman_play.authfile | default(omit) }}"
-    cert_dir: "{{ podman_play.cert_dir | default(omit) }}"
-    configmap: "{{ podman_play.configmap | default(omit) }}"
-    debug: "{{ podman_play.debug | default(omit) }}"
-    executable: "{{ podman_play.executable | default(omit) }}"
-    kube_file: "~/.ansible/tmp/{{ podman_play.kube_file.split('/')[-1] }}"
-    log_driver: "{{ podman_play.log_driver | default(omit) }}"
-    log_level: "{{ podman_play.log_level | default(omit) }}"
-    network: "{{ podman_play.network | default(omit) }}"
-    password: "{{ podman_play.password | default(omit) }}"
-    quiet: "{{ podman_play.quiet | default(omit) }}"
-    recreate: "{{ podman_play.recreate | default(omit) }}"
-    seccomp_profile_root: "{{ podman_play.seccomp_profile_root | default(omit) }}"
-    state: "{{ podman_play.state }}"
-    tls_verify: "{{ podman_play.tls_verify | default(omit) }}"
-    username: "{{ podman_play.username | default(omit) }}"
+- name: Invoke podman play
+  ansible.builtin.include_tasks:
+    file: Invoke-PodmanPlay.yml
   when:
     - podman_play.kube_file != none
     - podman_play.state != none
-
-- name: Delete tmp k8s yaml file
-  ansible.builtin.file:
-    path: "~/.ansible/tmp/{{ podman_play.kube_file.split('/')[-1] }}"
-    state: absent
 
 - name: Detect pod info
   containers.podman.podman_pod_info:
