--- a/AnsibleWorkShop/Invoke-PodmanRootlessPlay.yml
+++ b/AnsibleWorkShop/Invoke-PodmanRootlessPlay.yml
@@ -12,7 +12,14 @@
           name: samba
           state: present
         vars_podman_play:
-          kube_file: /KubeWorkShop/Samba/pod-samba.yaml
-          state: absent
+          kube_file: /KubeWorkShop/Samba/aio-samba.yaml
+          state: started # absent / created / started
+          force: true
         vars_podman_generate_systemd:
           name: samba
+        vars_service:
+          podman_pod:
+            user_scope:
+              skipped: false
+              enabled: true
+              state: started
